# playwright-workshop-v2

./: README.md  pyproject.toml
chapter_1/: test_fixtures.py  test_login.py
playwright_workshop_v2/chapter_1/: conftest.py  test_login.py
playwright_workshop_v2/chapter_1/page_objects/: base_page.py
tests/: conftest.py  test_login.py
tests/features/: login.feature
tests/page_objects/: login_page.py
