[tool.poetry]
name = "playwright-workshop-v2"
version = "0.1.0"
description = "A workshop about pytest, pytest-bdd and playwright"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
playwright = "^1.40.0"
pytest-playwright = "^0.4.3"
pytest-bdd = "^7.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
